@startuml

title __TANK's Class Diagram__\n

  namespace client.bean {
    enum Dir {
    }
  }
  

  namespace client.bean {
    class client.bean.Explode {
    }
  }
  

  namespace client.bean {
    class client.bean.Missile {
    }
  }
  

  namespace client.bean {
    class client.bean.Obstacle {
    }
  }
  

  namespace client.bean {
    class client.bean.Tank {
    }
  }
  

  namespace client.client {
    class client.client.NetClient {
    }
  }
  

  namespace client.client {
    class client.client.TankClient {
    }
  }
  

  namespace client.protocol {
    class client.protocol.MissileDeadMsg {
    }
  }
  

  namespace client.protocol {
    class client.protocol.MissileNewMsg {
    }
  }
  

  namespace client.protocol {
    interface client.protocol.Msg {
    }
  }
  

  namespace client.protocol {
    class client.protocol.TankDeadMsg {
    }
  }
  

  namespace client.protocol {
    class client.protocol.TankMoveMsg {
    }
  }
  

  namespace client.protocol {
    class client.protocol.TankNewMsg {
    }
  }
  

  namespace server {
    class server.TankServer {
    }
  }
  

  client.bean.Explode o-- client.client.TankClient : tc
  client.bean.Missile o-- client.bean.Dir : dir
  client.bean.Missile o-- client.client.TankClient : tc
  client.bean.Obstacle o-- client.client.TankClient : tc
  client.bean.Tank o-- client.bean.Dir : dir
  client.bean.Tank o-- client.bean.Dir : ptDir
  client.bean.Tank o-- client.client.TankClient : tc
  client.client.NetClient o-- client.client.TankClient : tc
  client.client.TankClient -up-|> java.awt.Frame
  client.client.TankClient o-- client.client.TankClient.ConDialog : dialog
  client.client.TankClient o-- client.bean.Tank : myTank
  client.client.TankClient o-- client.client.NetClient : nc
  client.protocol.MissileDeadMsg .up.|> client.protocol.Msg
  client.protocol.MissileDeadMsg o-- client.client.TankClient : tc
  client.protocol.MissileNewMsg .up.|> client.protocol.Msg
  client.protocol.MissileNewMsg o-- client.bean.Missile : m
  client.protocol.MissileNewMsg o-- client.client.TankClient : tc
  client.protocol.TankDeadMsg .up.|> client.protocol.Msg
  client.protocol.TankDeadMsg o-- client.client.TankClient : tc
  client.protocol.TankMoveMsg .up.|> client.protocol.Msg
  client.protocol.TankMoveMsg o-- client.bean.Dir : dir
  client.protocol.TankMoveMsg o-- client.bean.Dir : ptDir
  client.protocol.TankMoveMsg o-- client.client.TankClient : tc
  client.protocol.TankNewMsg .up.|> client.protocol.Msg
  client.protocol.TankNewMsg o-- client.bean.Tank : tank
  client.protocol.TankNewMsg o-- client.client.TankClient : tc


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
